--- a/requirements.txt
+++ b/requirements.txt
@@ -1,256 +1,154 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: osx-arm64
-abseil-cpp=20210324.2=hbdafb3b_0
-absl-py=0.13.0=pyhd8ed1ab_0
-aiohttp=3.7.4.post0=py38hea4295b_0
-altair=4.1.0=py_1
-appnope=0.1.2=py38h10201cd_1
-argh=0.26.2=pyh9f0ad1d_1002
-argon2-cffi=20.1.0=py38hea4295b_2
-arrow-cpp=5.0.0=py38h33c12a4_2_cpu
-astor=0.8.1=pyh9f0ad1d_0
-astunparse=1.6.3=pyhd8ed1ab_0
-async-timeout=3.0.1=py_1000
-async_generator=1.10=pyhd3eb1b0_0
-attrs=21.2.0=pyhd8ed1ab_0
-aws-c-cal=0.5.11=h4530763_0
-aws-c-common=0.6.2=h3422bc3_0
-aws-c-event-stream=0.2.7=h9972306_13
-aws-c-io=0.10.5=hea86ef8_0
-aws-checksums=0.1.11=h487e1a8_7
-aws-sdk-cpp=1.8.186=hb86bbe7_3
-backcall=0.2.0=pyh9f0ad1d_0
-backports=1.0=py_2
-backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
-base58=2.1.0=pyhd8ed1ab_0
-beautifulsoup4=4.9.3=pypi_0
-bleach=4.0.0=pyhd3eb1b0_0
-blinker=1.4=py_1
-boto3=1.17.109=pyhd3eb1b0_0
-botocore=1.20.109=pyhd3eb1b0_1
-brotlipy=0.7.0=py38hea4295b_1001
-bzip2=1.0.8=h620ffc9_4
-c-ares=1.17.2=h3422bc3_0
-ca-certificates=2021.7.5=hca03da5_1
-cached-property=1.5.2=hd8ed1ab_1
-cached_property=1.5.2=pyha770c72_1
-cachetools=4.2.2=pyhd8ed1ab_0
-cairo=1.16.0=he69dfd1_1008
-certifi=2021.5.30=py38hca03da5_1
-cffi=1.14.6=py38h0957451_0
-chardet=4.0.0=py38h10201cd_1
-charset-normalizer=2.0.0=pyhd8ed1ab_0
-click=8.0.1=py38h10201cd_0
-cryptography=3.4.7=py38h3c0dae5_0
-cycler=0.10.0=py_2
-dataclasses=0.8=pyhc8e2a94_1
-debugpy=1.4.1=py38h6f2b01f_0
-decorator=5.0.9=pyhd8ed1ab_0
-defusedxml=0.7.1=pyhd3eb1b0_0
-entrypoints=0.3=pyhd8ed1ab_1003
-ffmpeg=4.3.2=ha8417bf_0
-fontconfig=2.13.1=h1f4a5ec_0
-fpdf=1.7.2=pypi_0
-freetype=2.10.4=h17b34a0_1
-gast=0.5.0=pyhd8ed1ab_0
-gettext=0.21.0=h826f4ad_0
-gflags=2.2.2=hc88da5d_1004
-gitdb=4.0.7=pyhd3eb1b0_0
-gitpython=3.1.18=pyhd3eb1b0_1
-glog=0.5.0=h5c6a83d_0
-gmp=6.2.1=hc377ac9_0
-gnutls=3.6.15=h887c41c_0
-google-api-core=1.31.2=pypi_0
-google-api-python-client=1.10.1=pypi_0
-google-auth=1.34.0=pyh6c4a22f_0
-google-auth-httplib2=0.1.0=pypi_0
-google-auth-oauthlib=0.4.1=py_2
-google-cloud=0.34.0=pypi_0
-google-cloud-core=1.7.2=pypi_0
-google-cloud-datastore=1.15.0=pypi_0
-google-cloud-storage=1.42.0=pypi_0
-google-cloud-vision=1.0.0=pypi_0
-google-crc32c=1.1.2=pypi_0
-google-pasta=0.2.0=pyh8c360ce_0
-google-resumable-media=2.0.2=pypi_0
-googleapis-common-protos=1.53.0=pypi_0
-graphite2=1.3.14=h0e5e14a_0
-grpc-cpp=1.39.0=hc3f22eb_2
-grpcio=1.38.1=py38h69ee544_0
-h5py=2.10.0=pypi_0
-harfbuzz=2.9.1=h86911b4_0
-hdf5=1.10.6=nompi_h0fc092c_1114
-httplib2=0.19.1=pypi_0
-icu=68.1=hc377ac9_0
-idna=3.1=pyhd3deb0d_0
-importlib-metadata=4.6.3=py38h10201cd_0
-ipykernel=6.0.3=py38h2cb4d76_0
-ipython=7.26.0=py38h2cb4d76_0
-ipython_genutils=0.2.0=py_1
-ipywidgets=7.6.3=pyhd3eb1b0_1
-jasper=2.0.14=h2fa5e01_1
-jbig=2.1=h3422bc3_2003
-jedi=0.18.0=py38h10201cd_2
-jinja2=3.0.1=pyhd3eb1b0_0
-jmespath=0.10.0=py_0
-joblib=1.0.1=pyhd8ed1ab_0
-jpeg=9d=h27ca646_0
-jsonschema=3.2.0=pyhd8ed1ab_3
-jupyter_client=6.1.12=pyhd3eb1b0_0
-jupyter_core=4.7.1=py38h10201cd_0
-jupyterlab_pygments=0.1.2=py_0
-jupyterlab_widgets=1.0.0=pyhd3eb1b0_1
-keras-preprocessing=1.1.2=pyhd8ed1ab_0
-kiwisolver=1.3.1=py38h1670459_1
-krb5=1.19.2=hd92b7a7_0
-lame=3.100=h1a28f6b_0
-lcms2=2.12=had6a04f_0
-lerc=2.2.1=h9f76cd9_0
-libblas=3.9.0=11_osxarm64_openblas
-libbrotlicommon=1.0.9=h3422bc3_5
-libbrotlidec=1.0.9=h3422bc3_5
-libbrotlienc=1.0.9=h3422bc3_5
-libcblas=3.9.0=11_osxarm64_openblas
-libcurl=7.78.0=h8fe1914_0
-libcxx=12.0.1=h168391b_0
-libdeflate=1.7=h27ca646_5
-libedit=3.1.20191231=hc8eb9b7_2
-libev=4.33=h642e427_1
-libevent=2.1.10=h93437e4_3
-libffi=3.3=h9f76cd9_2
-libgfortran=5.0.0.dev0=11_0_1_hf114ba7_23
-libgfortran5=11.0.1.dev0=hf114ba7_23
-libglib=2.68.4=h6c200e4_0
-libiconv=1.16=h1230e6a_0
-libidn2=2.3.1=h1a28f6b_0
-liblapack=3.9.0=11_osxarm64_openblas
-liblapacke=3.9.0=11_osxarm64_openblas
-libnghttp2=1.43.0=hf3018f0_0
-libopenblas=0.3.17=openmp_h5dd58f0_1
-libopencv=4.5.3=py38ha6b2c9e_1
-libpng=1.6.37=hf7e6567_2
-libprotobuf=3.16.0=hccf11d3_0
-libsodium=1.0.18=h27ca646_1
-libssh2=1.9.0=hb80f160_6
-libtasn1=4.16.0=h1a28f6b_0
-libthrift=0.14.2=h28a9c34_1
-libtiff=4.3.0=hc6122e1_1
-libunistring=0.9.10=h1a28f6b_0
-libutf8proc=2.6.1=h27ca646_0
-libwebp-base=1.2.1=h3422bc3_0
-libxml2=2.9.12=h8c5e841_0
-llvm-openmp=12.0.1=hf3c4609_1
-lz4-c=1.9.3=hc4ed4cf_0
-markdown=3.3.4=pyhd8ed1ab_0
-markupsafe=2.0.1=py38h1230e6a_0
-matplotlib=3.4.2=py38h150bfb4_0
-matplotlib-base=3.4.2=py38hb140015_0
-matplotlib-inline=0.1.2=pyhd8ed1ab_2
-mistune=0.8.4=py38hea4295b_1004
-multidict=5.1.0=py38hea4295b_1
-nbclient=0.5.3=pyhd3eb1b0_0
-nbconvert=6.1.0=py38h10201cd_0
-nbformat=5.1.3=pyhd3eb1b0_0
-ncurses=6.2=h9aa5885_4
-nest-asyncio=1.5.1=pyhd3eb1b0_0
-nettle=3.7.3=h84b5d62_1
-notebook=6.4.2=pyha770c72_0
-numpy=1.21.2=pypi_0
-oauthlib=3.1.1=pyhd8ed1ab_0
-olefile=0.46=py_0
-opencv=4.5.3=py38h150bfb4_1
-openh264=2.1.1=habe5f53_0
-openjpeg=2.4.0=h062765e_1
-openssl=1.1.1l=h3422bc3_0
-opt_einsum=3.3.0=pyhd8ed1ab_1
-orc=1.6.9=h450e963_0
-packaging=21.0=pyhd3eb1b0_0
-pandas=1.3.1=py38h3777fb4_0
-pandocfilters=1.4.2=py_1
-parquet-cpp=1.5.1=2
-parso=0.8.2=pyhd8ed1ab_0
-pcre=8.45=hc377ac9_0
-pexpect=4.8.0=pyh9f0ad1d_2
-pickleshare=0.7.5=py_1003
-pillow=8.3.1=py38h02acf36_0
-pip=21.2.4=pypi_0
-pixman=0.40.0=h1a28f6b_0
-prometheus_client=0.11.0=pyhd3eb1b0_0
-prompt-toolkit=3.0.19=pyha770c72_0
-proto-plus=1.19.0=pypi_0
-protobuf=3.16.0=py38h6f2b01f_0
-ptyprocess=0.7.0=pyhd3deb0d_0
-py-opencv=4.5.3=py38hab544c7_1
-pyarrow=5.0.0=py38h5211c98_2_cpu
-pyasn1=0.4.8=py_0
-pyasn1-modules=0.2.7=py_0
-pycparser=2.20=pyh9f0ad1d_2
-pydeck=0.6.2=pyh44b312d_0
-pygments=2.9.0=pyhd8ed1ab_0
-pyjwt=2.1.0=pyhd8ed1ab_0
-pyopenssl=20.0.1=pyhd8ed1ab_0
-pyparsing=2.4.7=pyhd3eb1b0_0
-pyrsistent=0.17.3=py38hea4295b_2
-pysocks=1.7.1=py38h10201cd_3
-python=3.8.10=hf9733c0_1_cpython
-python-dateutil=2.8.2=pyhd3eb1b0_0
-python-flatbuffers=2.0=pyhd8ed1ab_0
-python_abi=3.8=2_cp38
-pytz=2021.1=pyhd3eb1b0_0
-pyu2f=0.1.5=pyhd8ed1ab_0
-pyyaml=5.4.1=py38h1230e6a_1
-pyzmq=22.2.1=py38h51b17a6_0
-re2=2021.08.01=hbdafb3b_0
-readline=8.1=hedafd6a_0
-requests=2.26.0=pyhd8ed1ab_0
-requests-oauthlib=1.3.0=pyh9f0ad1d_0
-rsa=4.7.2=pyh44b312d_0
-s3transfer=0.4.2=pyhd3eb1b0_0
-scikit-learn=0.24.2=py38h2cd4032_1
-scipy=1.7.0=py38hd0c9ec0_0
-send2trash=1.5.0=pyhd3eb1b0_1
-setuptools=57.5.0=pypi_0
-six=1.16.0=pyh6c4a22f_0
-smmap=4.0.0=pyhd3eb1b0_0
-snappy=1.1.8=hc88da5d_3
-soupsieve=2.2.1=pypi_0
-sqlite=3.36.0=h72a2b83_0
-streamlit=0.81.1=pyhd8ed1ab_0
-streamlit-metrics=0.1.0=pypi_0
-tensorboard=2.4.1=pyhd8ed1ab_0
-tensorboard-plugin-wit=1.8.0=pyh44b312d_0
-tensorflow=2.4.0rc0=pypi_0
-tensorflow-addons=0.11.2=pypi_0
-tensorflow-estimator=2.5.0=pyh81a9013_1
-termcolor=1.1.0=py_2
-terminado=0.10.1=py38h10201cd_0
-testpath=0.5.0=pyhd3eb1b0_0
-threadpoolctl=2.2.0=pyh8a188c0_0
-tk=8.6.10=hf7e6567_1
-toml=0.10.2=pyhd3eb1b0_0
-toolz=0.11.1=pyhd3eb1b0_0
-tornado=6.1=py38hea4295b_1
-traitlets=5.0.5=py_0
-typeguard=2.12.1=pyhd8ed1ab_0
-typing-extensions=3.10.0.0=hd8ed1ab_0
-typing_extensions=3.10.0.0=pyha770c72_0
-tzlocal=2.1=pyh9f0ad1d_0
-uritemplate=3.0.1=pypi_0
-urllib3=1.26.6=pyhd8ed1ab_0
-validators=0.18.2=pyhd3eb1b0_0
-watchdog=2.1.3=py38hea4295b_0
-wcwidth=0.2.5=pyh9f0ad1d_2
-webencodings=0.5.1=py_1
-werkzeug=2.0.1=pyhd8ed1ab_0
-wheel=0.37.0=pyhd8ed1ab_0
-widgetsnbextension=3.5.1=py38h10201cd_4
-wrapt=1.12.1=py38hea4295b_3
-x264=1!161.3030=h3422bc3_1
-xz=5.2.5=h642e427_1
-yaml=0.2.5=h1230e6a_0
-yarl=1.6.3=py38hea4295b_2
-zeromq=4.3.4=h9f76cd9_0
-zipp=3.5.0=pyhd8ed1ab_0
-zlib=1.2.11=h31e879b_1009
-zstd=1.5.0=h861e0a7_0
+absl-py @ file:///home/conda/feedstock_root/build_artifacts/absl-py_1623774798911/work
+aiohttp @ file:///Users/runner/miniforge3/conda-bld/aiohttp_1623682282434/work
+altair @ file:///tmp/build/80754af9/altair_1599835197802/work
+appnope @ file:///Users/runner/miniforge3/conda-bld/appnope_1610094717693/work
+argh @ file:///home/conda/feedstock_root/build_artifacts/argh_1595627874344/work
+argon2-cffi @ file:///Users/runner/miniforge3/conda-bld/argon2-cffi_1625821339251/work
+astor @ file:///home/conda/feedstock_root/build_artifacts/astor_1593610464257/work
+astunparse @ file:///home/conda/feedstock_root/build_artifacts/astunparse_1610696312422/work
+async-generator @ file:///home/ktietz/src/ci/async_generator_1611927993394/work
+async-timeout==3.0.1
+attrs @ file:///home/conda/feedstock_root/build_artifacts/attrs_1620387926260/work
+backcall @ file:///home/conda/feedstock_root/build_artifacts/backcall_1592338393461/work
+backports.functools-lru-cache @ file:///home/conda/feedstock_root/build_artifacts/backports.functools_lru_cache_1618230623929/work
+base58 @ file:///home/conda/feedstock_root/build_artifacts/base58_1610222858736/work
+beautifulsoup4==4.9.3
+bleach @ file:///tmp/build/80754af9/bleach_1628110601003/work
+blinker==1.4
+boto3 @ file:///tmp/build/80754af9/boto3_1626104930798/work
+botocore @ file:///tmp/build/80754af9/botocore_1626066382556/work
+brotlipy==0.7.0
+cached-property @ file:///home/conda/feedstock_root/build_artifacts/cached_property_1615209429212/work
+cachetools @ file:///home/conda/feedstock_root/build_artifacts/cachetools_1619593780156/work
+certifi==2021.5.30
+cffi @ file:///Users/runner/miniforge3/conda-bld/cffi_1625835338884/work
+chardet @ file:///Users/runner/miniforge3/conda-bld/chardet_1610093454189/work
+charset-normalizer @ file:///home/conda/feedstock_root/build_artifacts/charset-normalizer_1626371162869/work
+click @ file:///Users/runner/miniforge3/conda-bld/click_1621503761280/work
+cryptography @ file:///Users/runner/miniforge3/conda-bld/cryptography_1616851494399/work
+cycler==0.10.0
+debugpy @ file:///Users/runner/miniforge3/conda-bld/debugpy_1627074942740/work
+decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1621187651333/work
+defusedxml @ file:///tmp/build/80754af9/defusedxml_1615228127516/work
+entrypoints @ file:///home/conda/feedstock_root/build_artifacts/entrypoints_1605121927639/work/dist/entrypoints-0.3-py2.py3-none-any.whl
+flatbuffers @ file:///home/conda/feedstock_root/build_artifacts/python-flatbuffers_1620718971772/work
+fpdf==1.7.2
+gast @ file:///home/conda/feedstock_root/build_artifacts/gast_1624952364672/work
+gitdb @ file:///tmp/build/80754af9/gitdb_1617117951232/work
+GitPython @ file:///tmp/build/80754af9/gitpython_1624609474443/work
+google-api-core==1.31.2
+google-api-python-client==1.10.1
+google-auth @ file:///home/conda/feedstock_root/build_artifacts/google-auth_1627569118436/work
+google-auth-httplib2==0.1.0
+google-auth-oauthlib==0.4.1
+google-cloud==0.34.0
+google-cloud-core==1.7.2
+google-cloud-datastore==1.15.0
+google-cloud-storage==1.42.0
+google-cloud-vision==1.0.0
+google-crc32c==1.1.2
+google-pasta==0.2.0
+google-resumable-media==2.0.2
+googleapis-common-protos==1.53.0
+grpcio @ file:///Users/runner/miniforge3/conda-bld/grpcio_1624380665635/work
+h5py==2.10.0
+httplib2==0.19.1
+idna @ file:///home/conda/feedstock_root/build_artifacts/idna_1609836280497/work
+importlib-metadata @ file:///Users/runner/miniforge3/conda-bld/importlib-metadata_1627748953209/work
+ipykernel @ file:///Users/runner/miniforge3/conda-bld/ipykernel_1626728202492/work/dist/ipykernel-6.0.3-py3-none-any.whl
+ipython @ file:///Users/runner/miniforge3/conda-bld/ipython_1627912048139/work
+ipython-genutils==0.2.0
+ipywidgets @ file:///tmp/build/80754af9/ipywidgets_1610481889018/work
+jedi @ file:///Users/runner/miniforge3/conda-bld/jedi_1610146860797/work
+Jinja2 @ file:///tmp/build/80754af9/jinja2_1624781299557/work
+jmespath @ file:///tmp/build/80754af9/jmespath_1594304593830/work
+joblib @ file:///home/conda/feedstock_root/build_artifacts/joblib_1612898609989/work
+jsonschema @ file:///home/conda/feedstock_root/build_artifacts/jsonschema_1614815863336/work
+jupyter-client @ file:///tmp/build/80754af9/jupyter_client_1616770841739/work
+jupyter-core @ file:///Users/runner/miniforge3/conda-bld/jupyter_core_1612125280639/work
+jupyterlab-pygments @ file:///tmp/build/80754af9/jupyterlab_pygments_1601490720602/work
+jupyterlab-widgets @ file:///tmp/build/80754af9/jupyterlab_widgets_1609884341231/work
+Keras-Preprocessing @ file:///home/conda/feedstock_root/build_artifacts/keras-preprocessing_1610713559828/work
+kiwisolver @ file:///Users/runner/miniforge3/conda-bld/kiwisolver_1624926174587/work
+Markdown @ file:///home/conda/feedstock_root/build_artifacts/markdown_1614595805172/work
+MarkupSafe @ file:///Users/ktietz/Code/oss/ci_pkgs/markupsafe_1624486909578/work
+matplotlib @ file:///Users/runner/miniforge3/conda-bld/matplotlib-suite_1620506033672/work
+matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1618935594181/work
+mistune @ file:///Users/runner/miniforge3/conda-bld/mistune_1624941347518/work
+multidict @ file:///Users/runner/miniforge3/conda-bld/multidict_1624981217218/work
+nbclient @ file:///tmp/build/80754af9/nbclient_1614364831625/work
+nbconvert @ file:///Users/runner/miniforge3/conda-bld/nbconvert_1624472700848/work
+nbformat @ file:///tmp/build/80754af9/nbformat_1617383369282/work
+nest-asyncio @ file:///tmp/build/80754af9/nest-asyncio_1613680548246/work
+notebook @ file:///home/conda/feedstock_root/build_artifacts/notebook_1628253396076/work
+numpy==1.21.2
+oauthlib @ file:///home/conda/feedstock_root/build_artifacts/oauthlib_1622563202229/work
+olefile==0.46
+opt-einsum @ file:///home/conda/feedstock_root/build_artifacts/opt_einsum_1617859230218/work
+packaging @ file:///tmp/build/80754af9/packaging_1625611678980/work
+pandas==1.3.1
+pandocfilters==1.4.2
+parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1617148930513/work
+pexpect @ file:///home/conda/feedstock_root/build_artifacts/pexpect_1602535608087/work
+pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1602536217715/work
+Pillow @ file:///Users/runner/miniforge3/conda-bld/pillow_1625678155585/work
+prometheus-client @ file:///tmp/build/80754af9/prometheus_client_1623189609245/work
+prompt-toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1623977816122/work
+proto-plus==1.19.0
+protobuf==3.16.0
+ptyprocess @ file:///home/conda/feedstock_root/build_artifacts/ptyprocess_1609419310487/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
+pyarrow==5.0.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.7
+pycparser @ file:///home/conda/feedstock_root/build_artifacts/pycparser_1593275161868/work
+pydeck @ file:///home/conda/feedstock_root/build_artifacts/pydeck_1618346240213/work
+Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1620245170812/work
+PyJWT @ file:///home/conda/feedstock_root/build_artifacts/pyjwt_1619620644068/work
+pyOpenSSL @ file:///home/conda/feedstock_root/build_artifacts/pyopenssl_1608055815057/work
+pyparsing @ file:///home/linux1/recipes/ci/pyparsing_1610983426697/work
+pyrsistent @ file:///Users/runner/miniforge3/conda-bld/pyrsistent_1624984597560/work
+PySocks @ file:///Users/runner/miniforge3/conda-bld/pysocks_1610291456365/work
+python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
+pytz @ file:///tmp/build/80754af9/pytz_1612215392582/work
+pyu2f @ file:///home/conda/feedstock_root/build_artifacts/pyu2f_1604248910016/work
+PyYAML==5.4.1
+pyzmq @ file:///Users/runner/miniforge3/conda-bld/pyzmq_1628233173073/work
+requests @ file:///home/conda/feedstock_root/build_artifacts/requests_1626393743643/work
+requests-oauthlib @ file:///home/conda/feedstock_root/build_artifacts/requests-oauthlib_1595492159598/work
+rsa @ file:///home/conda/feedstock_root/build_artifacts/rsa_1614171254180/work
+s3transfer @ file:///tmp/build/80754af9/s3transfer_1623278116614/work
+scikit-learn @ file:///Users/runner/miniforge3/conda-bld/scikit-learn_1628432022092/work
+scipy @ file:///Users/runner/miniforge3/conda-bld/scipy_1624824918804/work
+Send2Trash @ file:///tmp/build/80754af9/send2trash_1607525499227/work
+six==1.16.0
+smmap @ file:///tmp/build/80754af9/smmap_1611694433573/work
+soupsieve==2.2.1
+streamlit @ file:///home/conda/feedstock_root/build_artifacts/streamlit_1620159617620/work
+streamlit-metrics==0.1.0
+tensorboard @ file:///home/conda/feedstock_root/build_artifacts/tensorboard_1610699261066/work/tensorboard-2.4.1-py3-none-any.whl
+tensorboard-plugin-wit @ file:///home/conda/feedstock_root/build_artifacts/tensorboard-plugin-wit_1611075653546/work/tensorboard_plugin_wit-1.8.0-py3-none-any.whl
+tensorflow @ https://github.com/apple/tensorflow_macos/releases/download/v0.1alpha3/tensorflow_macos-0.1a3-cp38-cp38-macosx_11_0_arm64.whl
+tensorflow-addons @ https://github.com/apple/tensorflow_macos/releases/download/v0.1alpha3/tensorflow_addons_macos-0.1a3-cp38-cp38-macosx_11_0_arm64.whl
+tensorflow-estimator @ file:///home/conda/feedstock_root/build_artifacts/tensorflow-estimator_1623773901369/work/wheel_dir/tensorflow_estimator-2.5.0-py2.py3-none-any.whl
+termcolor==1.1.0
+terminado @ file:///Users/runner/miniforge3/conda-bld/terminado_1623365427724/work
+testpath @ file:///tmp/build/80754af9/testpath_1624638946665/work
+threadpoolctl @ file:///home/conda/feedstock_root/build_artifacts/threadpoolctl_1626092076920/work
+toml @ file:///tmp/build/80754af9/toml_1616166611790/work
+toolz @ file:///home/linux1/recipes/ci/toolz_1610987900194/work
+tornado @ file:///Users/runner/miniforge3/conda-bld/tornado_1625488911690/work
+traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1602771532708/work
+typeguard @ file:///home/conda/feedstock_root/build_artifacts/typeguard_1622818924333/work
+typing-extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1622748266870/work
+tzlocal @ file:///home/conda/feedstock_root/build_artifacts/tzlocal_1588939190034/work
+uritemplate==3.0.1
+urllib3 @ file:///home/conda/feedstock_root/build_artifacts/urllib3_1624634538755/work
+validators @ file:///tmp/build/80754af9/validators_1612286467315/work
+watchdog @ file:///Users/runner/miniforge3/conda-bld/watchdog_1624720272414/work
+wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1600965781394/work
+webencodings==0.5.1
+Werkzeug @ file:///home/conda/feedstock_root/build_artifacts/werkzeug_1621518206714/work
+widgetsnbextension @ file:///Users/runner/miniforge3/conda-bld/widgetsnbextension_1605475524172/work
+wrapt @ file:///Users/runner/miniforge3/conda-bld/wrapt_1624971819058/work
+yarl @ file:///Users/runner/miniforge3/conda-bld/yarl_1625233166158/work
+zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1625284368454/work
