--- a/requirements.txt
+++ b/requirements.txt
@@ -1,44 +1,12 @@
-absl-py @ file:///home/conda/feedstock_root/build_artifacts/absl-py_1623774798911/work
-aiohttp @ file:///Users/runner/miniforge3/conda-bld/aiohttp_1623682282434/work
-altair @ file:///tmp/build/80754af9/altair_1599835197802/work
-appnope @ file:///Users/runner/miniforge3/conda-bld/appnope_1610094717693/work
-argh @ file:///home/conda/feedstock_root/build_artifacts/argh_1595627874344/work
-argon2-cffi @ file:///Users/runner/miniforge3/conda-bld/argon2-cffi_1625821339251/work
-astor @ file:///home/conda/feedstock_root/build_artifacts/astor_1593610464257/work
-astunparse @ file:///home/conda/feedstock_root/build_artifacts/astunparse_1610696312422/work
-async-generator @ file:///home/ktietz/src/ci/async_generator_1611927993394/work
-async-timeout==3.0.1
-attrs @ file:///home/conda/feedstock_root/build_artifacts/attrs_1620387926260/work
-backcall @ file:///home/conda/feedstock_root/build_artifacts/backcall_1592338393461/work
-backports.functools-lru-cache @ file:///home/conda/feedstock_root/build_artifacts/backports.functools_lru_cache_1618230623929/work
-base58 @ file:///home/conda/feedstock_root/build_artifacts/base58_1610222858736/work
 beautifulsoup4==4.9.3
-bleach @ file:///tmp/build/80754af9/bleach_1628110601003/work
 blinker==1.4
-boto3 @ file:///tmp/build/80754af9/boto3_1626104930798/work
-botocore @ file:///tmp/build/80754af9/botocore_1626066382556/work
 brotlipy==0.7.0
-cached-property @ file:///home/conda/feedstock_root/build_artifacts/cached_property_1615209429212/work
-cachetools @ file:///home/conda/feedstock_root/build_artifacts/cachetools_1619593780156/work
 certifi==2021.5.30
-cffi @ file:///Users/runner/miniforge3/conda-bld/cffi_1625835338884/work
-chardet @ file:///Users/runner/miniforge3/conda-bld/chardet_1610093454189/work
-charset-normalizer @ file:///home/conda/feedstock_root/build_artifacts/charset-normalizer_1626371162869/work
-click @ file:///Users/runner/miniforge3/conda-bld/click_1621503761280/work
-cryptography @ file:///Users/runner/miniforge3/conda-bld/cryptography_1616851494399/work
 cycler==0.10.0
-debugpy @ file:///Users/runner/miniforge3/conda-bld/debugpy_1627074942740/work
-decorator @ file:///home/conda/feedstock_root/build_artifacts/decorator_1621187651333/work
-defusedxml @ file:///tmp/build/80754af9/defusedxml_1615228127516/work
-entrypoints @ file:///home/conda/feedstock_root/build_artifacts/entrypoints_1605121927639/work/dist/entrypoints-0.3-py2.py3-none-any.whl
-flatbuffers @ file:///home/conda/feedstock_root/build_artifacts/python-flatbuffers_1620718971772/work
+entrypoints-0.3-py2.py3-none-any.whl
 fpdf==1.7.2
-gast @ file:///home/conda/feedstock_root/build_artifacts/gast_1624952364672/work
-gitdb @ file:///tmp/build/80754af9/gitdb_1617117951232/work
-GitPython @ file:///tmp/build/80754af9/gitpython_1624609474443/work
 google-api-core==1.31.2
 google-api-python-client==1.10.1
-google-auth @ file:///home/conda/feedstock_root/build_artifacts/google-auth_1627569118436/work
 google-auth-httplib2==0.1.0
 google-auth-oauthlib==0.4.1
 google-cloud==0.34.0
@@ -50,105 +18,22 @@ google-crc32c==1.1.2
 google-pasta==0.2.0
 google-resumable-media==2.0.2
 googleapis-common-protos==1.53.0
-grpcio @ file:///Users/runner/miniforge3/conda-bld/grpcio_1624380665635/work
 h5py==2.10.0
 httplib2==0.19.1
-idna @ file:///home/conda/feedstock_root/build_artifacts/idna_1609836280497/work
-importlib-metadata @ file:///Users/runner/miniforge3/conda-bld/importlib-metadata_1627748953209/work
-ipykernel @ file:///Users/runner/miniforge3/conda-bld/ipykernel_1626728202492/work/dist/ipykernel-6.0.3-py3-none-any.whl
-ipython @ file:///Users/runner/miniforge3/conda-bld/ipython_1627912048139/work
 ipython-genutils==0.2.0
-ipywidgets @ file:///tmp/build/80754af9/ipywidgets_1610481889018/work
-jedi @ file:///Users/runner/miniforge3/conda-bld/jedi_1610146860797/work
-Jinja2 @ file:///tmp/build/80754af9/jinja2_1624781299557/work
-jmespath @ file:///tmp/build/80754af9/jmespath_1594304593830/work
-joblib @ file:///home/conda/feedstock_root/build_artifacts/joblib_1612898609989/work
-jsonschema @ file:///home/conda/feedstock_root/build_artifacts/jsonschema_1614815863336/work
-jupyter-client @ file:///tmp/build/80754af9/jupyter_client_1616770841739/work
-jupyter-core @ file:///Users/runner/miniforge3/conda-bld/jupyter_core_1612125280639/work
-jupyterlab-pygments @ file:///tmp/build/80754af9/jupyterlab_pygments_1601490720602/work
-jupyterlab-widgets @ file:///tmp/build/80754af9/jupyterlab_widgets_1609884341231/work
-Keras-Preprocessing @ file:///home/conda/feedstock_root/build_artifacts/keras-preprocessing_1610713559828/work
-kiwisolver @ file:///Users/runner/miniforge3/conda-bld/kiwisolver_1624926174587/work
-Markdown @ file:///home/conda/feedstock_root/build_artifacts/markdown_1614595805172/work
-MarkupSafe @ file:///Users/ktietz/Code/oss/ci_pkgs/markupsafe_1624486909578/work
-matplotlib @ file:///Users/runner/miniforge3/conda-bld/matplotlib-suite_1620506033672/work
-matplotlib-inline @ file:///home/conda/feedstock_root/build_artifacts/matplotlib-inline_1618935594181/work
-mistune @ file:///Users/runner/miniforge3/conda-bld/mistune_1624941347518/work
-multidict @ file:///Users/runner/miniforge3/conda-bld/multidict_1624981217218/work
-nbclient @ file:///tmp/build/80754af9/nbclient_1614364831625/work
-nbconvert @ file:///Users/runner/miniforge3/conda-bld/nbconvert_1624472700848/work
-nbformat @ file:///tmp/build/80754af9/nbformat_1617383369282/work
-nest-asyncio @ file:///tmp/build/80754af9/nest-asyncio_1613680548246/work
-notebook @ file:///home/conda/feedstock_root/build_artifacts/notebook_1628253396076/work
-numpy==1.21.2
-oauthlib @ file:///home/conda/feedstock_root/build_artifacts/oauthlib_1622563202229/work
-olefile==0.46
-opt-einsum @ file:///home/conda/feedstock_root/build_artifacts/opt_einsum_1617859230218/work
-packaging @ file:///tmp/build/80754af9/packaging_1625611678980/work
 pandas==1.3.1
 pandocfilters==1.4.2
-parso @ file:///home/conda/feedstock_root/build_artifacts/parso_1617148930513/work
-pexpect @ file:///home/conda/feedstock_root/build_artifacts/pexpect_1602535608087/work
-pickleshare @ file:///home/conda/feedstock_root/build_artifacts/pickleshare_1602536217715/work
-Pillow @ file:///Users/runner/miniforge3/conda-bld/pillow_1625678155585/work
-prometheus-client @ file:///tmp/build/80754af9/prometheus_client_1623189609245/work
-prompt-toolkit @ file:///home/conda/feedstock_root/build_artifacts/prompt-toolkit_1623977816122/work
 proto-plus==1.19.0
 protobuf==3.16.0
-ptyprocess @ file:///home/conda/feedstock_root/build_artifacts/ptyprocess_1609419310487/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
 pyarrow==5.0.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.7
-pycparser @ file:///home/conda/feedstock_root/build_artifacts/pycparser_1593275161868/work
-pydeck @ file:///home/conda/feedstock_root/build_artifacts/pydeck_1618346240213/work
-Pygments @ file:///home/conda/feedstock_root/build_artifacts/pygments_1620245170812/work
-PyJWT @ file:///home/conda/feedstock_root/build_artifacts/pyjwt_1619620644068/work
-pyOpenSSL @ file:///home/conda/feedstock_root/build_artifacts/pyopenssl_1608055815057/work
-pyparsing @ file:///home/linux1/recipes/ci/pyparsing_1610983426697/work
-pyrsistent @ file:///Users/runner/miniforge3/conda-bld/pyrsistent_1624984597560/work
-PySocks @ file:///Users/runner/miniforge3/conda-bld/pysocks_1610291456365/work
-python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
-pytz @ file:///tmp/build/80754af9/pytz_1612215392582/work
-pyu2f @ file:///home/conda/feedstock_root/build_artifacts/pyu2f_1604248910016/work
 PyYAML==5.4.1
-pyzmq @ file:///Users/runner/miniforge3/conda-bld/pyzmq_1628233173073/work
-requests @ file:///home/conda/feedstock_root/build_artifacts/requests_1626393743643/work
-requests-oauthlib @ file:///home/conda/feedstock_root/build_artifacts/requests-oauthlib_1595492159598/work
-rsa @ file:///home/conda/feedstock_root/build_artifacts/rsa_1614171254180/work
-s3transfer @ file:///tmp/build/80754af9/s3transfer_1623278116614/work
-scikit-learn @ file:///Users/runner/miniforge3/conda-bld/scikit-learn_1628432022092/work
-scipy @ file:///Users/runner/miniforge3/conda-bld/scipy_1624824918804/work
-Send2Trash @ file:///tmp/build/80754af9/send2trash_1607525499227/work
 six==1.16.0
-smmap @ file:///tmp/build/80754af9/smmap_1611694433573/work
 soupsieve==2.2.1
-streamlit @ file:///home/conda/feedstock_root/build_artifacts/streamlit_1620159617620/work
 streamlit-metrics==0.1.0
-tensorboard @ file:///home/conda/feedstock_root/build_artifacts/tensorboard_1610699261066/work/tensorboard-2.4.1-py3-none-any.whl
-tensorboard-plugin-wit @ file:///home/conda/feedstock_root/build_artifacts/tensorboard-plugin-wit_1611075653546/work/tensorboard_plugin_wit-1.8.0-py3-none-any.whl
 tensorflow @ https://github.com/apple/tensorflow_macos/releases/download/v0.1alpha3/tensorflow_macos-0.1a3-cp38-cp38-macosx_11_0_arm64.whl
 tensorflow-addons @ https://github.com/apple/tensorflow_macos/releases/download/v0.1alpha3/tensorflow_addons_macos-0.1a3-cp38-cp38-macosx_11_0_arm64.whl
-tensorflow-estimator @ file:///home/conda/feedstock_root/build_artifacts/tensorflow-estimator_1623773901369/work/wheel_dir/tensorflow_estimator-2.5.0-py2.py3-none-any.whl
 termcolor==1.1.0
-terminado @ file:///Users/runner/miniforge3/conda-bld/terminado_1623365427724/work
-testpath @ file:///tmp/build/80754af9/testpath_1624638946665/work
-threadpoolctl @ file:///home/conda/feedstock_root/build_artifacts/threadpoolctl_1626092076920/work
-toml @ file:///tmp/build/80754af9/toml_1616166611790/work
-toolz @ file:///home/linux1/recipes/ci/toolz_1610987900194/work
-tornado @ file:///Users/runner/miniforge3/conda-bld/tornado_1625488911690/work
-traitlets @ file:///home/conda/feedstock_root/build_artifacts/traitlets_1602771532708/work
-typeguard @ file:///home/conda/feedstock_root/build_artifacts/typeguard_1622818924333/work
-typing-extensions @ file:///home/conda/feedstock_root/build_artifacts/typing_extensions_1622748266870/work
-tzlocal @ file:///home/conda/feedstock_root/build_artifacts/tzlocal_1588939190034/work
 uritemplate==3.0.1
-urllib3 @ file:///home/conda/feedstock_root/build_artifacts/urllib3_1624634538755/work
-validators @ file:///tmp/build/80754af9/validators_1612286467315/work
-watchdog @ file:///Users/runner/miniforge3/conda-bld/watchdog_1624720272414/work
-wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1600965781394/work
 webencodings==0.5.1
-Werkzeug @ file:///home/conda/feedstock_root/build_artifacts/werkzeug_1621518206714/work
-widgetsnbextension @ file:///Users/runner/miniforge3/conda-bld/widgetsnbextension_1605475524172/work
-wrapt @ file:///Users/runner/miniforge3/conda-bld/wrapt_1624971819058/work
-yarl @ file:///Users/runner/miniforge3/conda-bld/yarl_1625233166158/work
-zipp @ file:///home/conda/feedstock_root/build_artifacts/zipp_1625284368454/work
