--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ googleapis-common-protos==1.53.0
 h5py==2.10.0
 httplib2==0.19.1
 ipython-genutils==0.2.0
+opencv-python==2.2.0
 pandas==1.3.1
 pandocfilters==1.4.2
 proto-plus==1.19.0
