--- a/requirements.txt
+++ b/requirements.txt
@@ -24,15 +24,12 @@ opencv-python==3.4.2.17
 pandas==1.3.1
 pandocfilters==1.4.2
 proto-plus==1.19.0
-protobuf==3.16.0
 pyarrow==5.0.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.7
 PyYAML==5.4.1
-six==1.16.0
-soupsieve==2.2.1
 streamlit-metrics==0.1.0
-tensorflow==2.6.0
+tensorflow
 termcolor==1.1.0
 uritemplate==3.0.1
 webencodings==0.5.1
