--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ google-resumable-media==2.0.2
 googleapis-common-protos==1.53.0
 h5py==2.10.0
 httplib2==0.19.1
+instagramy
 ipython-genutils==0.2.0
 opencv-python==3.4.2.17
 pandas==1.3.1
