--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,6 @@ googleapis-common-protos==1.53.0
 h5py==2.10.0
 httplib2==0.19.1
 instagramy
-ipython-genutils==0.2.0
 opencv-python==3.4.2.17
 pandas==1.3.1
 pandocfilters==1.4.2
@@ -29,6 +28,7 @@ pyarrow==5.0.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.7
 PyYAML==5.4.1
+streamlit==1.3.1
 streamlit-metrics==0.1.0
 tensorflow
 termcolor==1.1.0
