--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,5 @@
 [theme]
-base='dark'
-primaryColor='#CB3371'
+primaryColor="#CB3371"
 backgroundColor="#453C39"
 secondaryBackgroundColor="#857971"
 textColor="#D9BBA8"
