--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ googleapis-common-protos==1.53.0
 h5py==2.10.0
 httplib2==0.19.1
 instagramy
+lxml
 matplotlib==3.5.2
 opencv-python==3.4.2.17
 pandas==1.3.1
